Dialog panel coloring

--- a/client/webserver/site/src/css/application.scss
+++ b/client/webserver/site/src/css/application.scss
@@ -6,10 +6,14 @@ $buycolor_dark: #29bb77;
 $sellcolor_dark: #e95e5e;
 $buycolor_light: #207a46;
 $sellcolor_light: #99302b;
-$light_body_bg: white;
-$dark_body_bg: #091a28;
+$dark_body_bg: #04111c;
+$dark_main_bg: #091a28;
+$dark_dialog_bg: #102332;
+$light_body_bg: #ecebf0;
+$light_main_bg: #f4f2f9;
+$light_dialog_bg: #fff;
 $light_border_color: #ddd;
-$dark_border_color: #383f4b;
+$dark_border_color: #272c3580;
 $light_input_border: #999;
 $dark_input_border: #555;
 $sans: "source-sans", sans-serif;
