--- a/client/webserver/site/src/css/settings.scss
+++ b/client/webserver/site/src/css/settings.scss
@@ -27,7 +27,8 @@ div.settings {
 }
 
 span.settings-gear {
-  display: inline-block;
+  display: block;
+  text-align: center;
   font-size: 40px;
   opacity: 0.6;
   margin: 10px;
