--- a/client/webserver/site/src/html/login.tmpl
+++ b/client/webserver/site/src/html/login.tmpl
@@ -3,12 +3,12 @@
 <div id="main" data-handler="login" class="main align-items-center justify-content-center flex-column">
   <div class="d-flex flex-column w-100" id="forms">
     {{- /* LOGIN FORM */ -}}
-    <form class="mx-auto my-5 d-hide" id="loginForm">
+    <form class="mx-auto my-5 d-hide dialog-panel" id="loginForm">
       {{template "loginForm"}}
     </form>
 
      {{- /* RESET APP PASSWORD */ -}}
-    <form class="mx-auto my-5 d-hide" id="resetAppPWForm">
+    <form class="mx-auto my-5 d-hide dialog-panel" id="resetAppPWForm">
       {{template "appPassResetForm"}}
     </form>
   </div>
