--- a/client/webserver/site/src/html/orders.tmpl
+++ b/client/webserver/site/src/html/orders.tmpl
@@ -89,7 +89,7 @@
   {{- /* POP UP FORMS */ -}}
   <div id="forms" class="d-hide">
     {{- /* DELETE ARCHIVED RECORDS FORM */ -}}
-    <form class="d-hide" id="deleteArchivedRecordsForm"><div class="form-closer hoverbg"><span class="ico-cross"></span></div>
+    <form class="d-hide dialog-panel" id="deleteArchivedRecordsForm"><div class="form-closer hoverbg"><span class="ico-cross"></span></div>
       <div class="py-1 text-center position-relative fs22 sans-light">
        [[[delete_archived_records]]]
       </div>
