--- a/client/webserver/site/src/css/main.scss
+++ b/client/webserver/site/src/css/main.scss
@@ -77,7 +77,6 @@ header.maintop {
   justify-content: space-between;
   align-items: center;
   z-index: 100;
-  border-bottom: 1px solid $light_border_color;
   background-color: $light_body_bg;
 }
 
@@ -173,7 +172,7 @@ header.maintop a:hover,
 }
 
 #header .hoverbright:hover {
-  color: #222;
+  color: #666;
 }
 
 form.card button:hover {
@@ -336,7 +335,7 @@ div.popup-notes {
   display: flex;
   flex-direction: column;
   align-items: stretch;
-  background-color: $light_body_bg;
+  background-color: $light_dialog_bg;
   border: 1px solid #7777;
   z-index: 100;
   font-family: $sans;
@@ -400,6 +399,10 @@ div.popup-notes {
 
 .d-hide {
   display: none !important;
+}
+
+.d-conceal {
+  visibility: hidden !important;
 }
 
 .buycolor {
@@ -466,7 +469,8 @@ hr.dashed {
 }
 
 .hoverbg:hover {
-  background-color: #7775;
+  background-color: #7777771b;
+  cursor: pointer;
 }
 
 div.form-closer {
@@ -548,5 +552,10 @@ sup.token-parent {
   &:hover {
     font-weight: bold;
   }
+}
+
+.dialog-panel {
+  background-color: $light_dialog_bg;
+  filter: drop-shadow(3px 3px 5px #00000030);
 }
 
