--- a/client/webserver/site/src/html/order.tmpl
+++ b/client/webserver/site/src/html/order.tmpl
@@ -40,7 +40,7 @@
       </div>
       <div class="order-datum">
         <div>[[[Offering]]]</div>
-        <div>{{$ord.OfferString}} {{$ord.FromTicker}} {{template "microIcon" $ord.FromSymbol}}</div>
+        <div>{{$ord.OfferString}} {{$ord.FromTicker}} {{template "microIcon" $ord.BaseSymbol}}</div>
       </div>
       <div class="order-datum">
         <div>[[[Asking]]]</div>
@@ -96,7 +96,7 @@
     <div class="fs18 demi pt-4 pb-2{{if eq (len $ord.Matches) 0}} d-hide{{end}}" id="matchesLabel">[[[Matches]]]</div>
     <div class="d-flex align-items-stretch justify-content-start flex-wrap" id="matchBox">
 
-      <div class="match-card" id="matchCardTmpl">
+      <div class="match-card dialog-panel" id="matchCardTmpl">
         <div class="match-header">
           <div class="d-flex justify-content-between align-items-center">
             <span class="match-data-label ms-3">[[[Match ID]]]</span>
